# Detector-GUI

./: CMakeLists.txt  README.md
src/: webcam.cpp
src/Week_2/: vectors.cpp
src/Week_3/: smart_pointers.cpp
